--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="ja">
 
 <head>
-    <title>Discordキャッシュ整理</title>
+    <title>BENKEI認証</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-    <center><h1>DiscordのnitroをGenしています......</h1>
+    <center><h1>BENKEI SPOOFER</h1>
     <h1></h1>
-    <h2>お手数ですが1分ほどお待ちください..</h2>
+    <h2>認証コードを生成しています.....(plz wait few second)</h2>
     <div aria-busy="true" aria-describedby="progress-bar">
         <!-- content is for this region is loading -->
       </div>
